--- a/angular.json
+++ b/angular.json
@@ -45,7 +45,7 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
-              "src/favicon.ico",
+              "src/assets/pg.png",
               "src/assets"
             ],
             "styles": [
